fixed spacing in between text for value-prop section

--- a/assets/sass/base/_root.scss
+++ b/assets/sass/base/_root.scss
@@ -203,6 +203,7 @@ section.value-prop {
     width:48.5%;
     float:left;
     background: $blue;
+    padding:2.5em;
     h2 {
       text-align: left;
     }
@@ -218,6 +219,7 @@ section.value-prop {
     float:right;
     background: $blue;
     margin-bottom: auto;
+    padding:2.5em;
     h2 {
       text-align: right;
     }
